# linkedin_content_agent

./: .gitignore  README.md  content_result.txt  linkedin_content_agent.html  pyproject.toml  research_result.json
db/: chroma.sqlite3
output/: content_result.txt  research_result.json
src/linkedin_content_agent/: main.py  schemas.py
src/linkedin_content_agent/crews/content_crew/: content_crew.py
src/linkedin_content_agent/crews/content_crew/config/: agents.yaml  tasks.yaml
src/linkedin_content_agent/crews/research_crew/: research_crew.py
src/linkedin_content_agent/crews/research_crew/config/: agents.yaml  tasks.yaml
