[project]
name = "linkedin_content_agent"
version = "0.1.0"
description = "linkedin_content_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
kickoff = "linkedin_content_agent.main:kickoff"
run_crew = "linkedin_content_agent.main:kickoff"
plot = "linkedin_content_agent.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
